--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,17 @@ __pycache__
 /outputs
 /logs
 /weights
+lightning_logs/
+*.log
 
 # OS
 .DS_Store
 
+# Dev
+.vscode
+/unittest
+/local
+
+# Demo results
+/demo/data
+/demo/visualizations
