--- a/config/data/ikea_partnet_everyday_twobytwo_modelnet_tudl_objverse.yaml
+++ b/config/data/ikea_partnet_everyday_twobytwo_modelnet_tudl_objverse.yaml
@@ -6,8 +6,8 @@ min_points_per_part: 20
 multi_anchor: true
 
 data_root: ${data_root}
-dataset_names: ["ikea"]
+dataset_names: ["ikea", "partnet_v0", "everyday", "twobytwo", "modelnet", "tudl", "objaverse_v1"]
 
-batch_size: 8
-num_workers: 8
+batch_size: 4
+num_workers: 2
 limit_val_samples: 0  # 0 for all samples
