--- a/config/model/rectified_point_flow.yaml
+++ b/config/model/rectified_point_flow.yaml
@@ -15,7 +15,8 @@ optimizer:
 lr_scheduler:
   _target_: torch.optim.lr_scheduler.MultiStepLR
   _partial_: True
-  milestones: [1000, 1300, 1600, 1900]
+  milestones: [1000, 1200, 1400, 1600, 1800]
   gamma: 0.5
 
 timestep_sampling: "u_shaped"
+inference_sampling_steps: 50
