--- a/config/trainer/main.yaml
+++ b/config/trainer/main.yaml
@@ -7,7 +7,7 @@ precision: "16-mixed"
 default_root_dir: ${log_dir}
 
 max_epochs: 2000
-gradient_clip_val: 0.3
+gradient_clip_val: 0.5
 accumulate_grad_batches: 1
 check_val_every_n_epoch: 10
 
@@ -18,7 +18,7 @@ callbacks:
     auto_insert_metric_name: False
     save_last: True
     save_top_k: 1
-    monitor: val/object_cd
+    monitor: val/overall/object_cd
     mode: min
     every_n_epochs: 1
     save_on_train_epoch_end: True
