--- a/config/visualizer/default.yaml
+++ b/config/visualizer/default.yaml
@@ -20,16 +20,16 @@ scale_to_original_size: false
 colormap: default
 
 # Image settings
-image_size: 320           # Output resolution (square image)
+image_size: 480           # Output resolution (square image)
 point_radius: 0.015       # Radius of sphere of each point
 
 # Camera parameters
 camera_dist: 4.0          # Distance from the camera to the point cloud center
-camera_elev: 25.0         # Elevation angle above the horizon
-camera_azim: 120.0        # Azimuth angle on the horizon plane
+camera_elev: 30.0         # Elevation angle above the horizon
+camera_azim: 45.0        # Azimuth angle on the horizon plane
 camera_fov: 40.0          # Field of view
 
 # Trajectory GIF settings
-save_trajectory: true     # Whether to save the trajectory as a GIF animation
+save_trajectory: false    # Whether to save the trajectory as a GIF animation
 trajectory_gif_fps: 25    # Frames per second
 trajectory_gif_pause_last_frame: 1.0  # Pause for the last frame in seconds
