--- a/config/RPF_base_predict_overlap.yaml
+++ b/config/RPF_base_predict_overlap.yaml
@@ -18,7 +18,7 @@ data:
 log_dir: ./demo/
 
 # Checkpoint path
-ckpt_path: ./weights/RPF_base_pretrain_ep599.ckpt
+ckpt_path: null      # when null, the checkpoint will be downloaded from Hugging Face
 
 # Model settings
 model:
