--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ wandb         = "0.20.1"
 mitsuba       = "3.6.4"
 matplotlib    = "3.10.3"
 rich          = "14.0.0"
+huggingface-hub = "0.26.2"
 
 
 [build-system]
