--- a/config/data/ikea_partnet_everyday_twobytwo_modelnet_tudl.yaml
+++ b/config/data/ikea_partnet_everyday_twobytwo_modelnet_tudl.yaml
@@ -6,10 +6,10 @@ min_points_per_part: 20
 multi_anchor: true
 
 data_root: ${data_root}
-dataset_names: ["ikea", "partnet", "everyday", "twobytwo", "modelnet", "tudl"]
+dataset_names: ["ikea", "partnet_v0", "everyday", "twobytwo", "modelnet", "tudl"]
 up_axis: {
   "ikea": "y",
-  "partnet": "y",
+  "partnet_v0": "y",
   "everyday": "z",
   "twobytwo": "y",
   "modelnet": "y",
